# file-encryptor

./: .gitignore  Cargo.toml
src/: main.rs
