[package]
name = "file-encryptor"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tindercrypt = { version = "0.3", default-features = false }
rpassword = "7.2"
clap = { version = "4.1", features = ["cargo"] }
rfd = "0.11"
cwd = "1.1"
